s2s-demo-route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s2s-entry-route
  namespace: s2s
spec:
  gateways:
  - knative-shared-gateway.knative-serving.svc.cluster.local
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      authority: demoapp.helloworld.svc.cluster.local
    route:
    - destination:
        host: knative-ingressgateway.istio-system.svc.cluster.local
      weight: 100
